# J-The-Agent

./: .gitignore  README.md  config.example.yaml  pyproject.toml
core/: __init__.py  agent.py  approvals.py  audit.py  config.py  llm.py  safety.py  tools.py  utils.py
modes/: __init__.py  cli.py  common_cli.py  runtime.py
modes/companion/: __init__.py  agent.py  cli.py  hello.py  launch.py  memory_store.py  permissions.py  reminders.py  settings.py  tool_guides.py  tools.py  url_safety.py  web.py
modes/companion/memory/: memory.md  soul.md  user.md
modes/companion/tools/: apps.md  code.md  files.md  index.md  media.md  memory.md  reminders.md  system.md  web.md
modes/quick/: __init__.py  agent.py  cli.py  tools.py
plugins/: README.md  example.py
scripts/: install.sh
