[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "j-the-agent"
version = "0.4.0"
description = "J: a modular AI agent with Quick, Companion, and Manager modes"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "J the Agent contributors" }]
dependencies = [
    "ollama>=0.4",
    "openai>=1.50",
    "pydantic>=2.8",
    "pyyaml>=6.0",
    "questionary>=2.0",
    "rich>=13.8",
    "typer>=0.12",
]

# End users: use scripts/install.sh (selects one mode, prunes the other).
# pip is only for packaging inside that venv, or for contributor checkouts below.
[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "ruff>=0.6",
]

[project.scripts]
agent = "modes.cli:app"
ja = "modes.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "modes*"]

[tool.setuptools.package-data]
"modes.companion" = ["memory/*.md", "tools/*.md"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
